# lounge

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  main.cpp  packages.txt
config/: game.toml
engine/backend/: backend.cpp  backend.hpp  backend_event_handlers.cpp  backend_event_handlers.hpp  backend_types.hpp  network_manager.cpp  network_manager.hpp
engine/backend/telegram/: telegram_backend.cpp  telegram_backend.hpp
engine/config/: config.cpp  config.hpp
engine/core/: types.hpp
engine/events/: event.hpp  event_service.cpp  event_service.hpp
engine/input/: input_handler.cpp  input_handler.hpp  input_state.hpp
engine/pipeline/: pipeline.hpp
engine/platform/: sdl_platform.cpp  sdl_platform.hpp
engine/render/: render_queue.hpp  renderer.cpp  renderer.hpp
engine/resources/: resource_manager.cpp  resource_manager.hpp
engine/store/: store.hpp
engine/ui/: ui_backend.hpp  ui_component.hpp  ui_context.cpp  ui_context.hpp  ui_document.cpp  ui_document.hpp  ui_element.hpp  ui_screen.hpp  ui_screen_host.hpp  ui_screen_registry.cpp  ui_screen_registry.hpp  ui_system.cpp  ui_system.hpp  ui_types.hpp
engine/ui/backends/rml/: rml_render_interface.cpp  rml_render_interface.hpp  rml_system_interface.cpp  rml_system_interface.hpp  rml_ui_backend.cpp  rml_ui_backend.hpp
game/: game.cpp  state.hpp
game/pipeline/: game_pipeline.cpp  game_pipeline.hpp
game/pipeline/stages/: input_stage.cpp  input_stage.hpp  logic_stage.cpp  logic_stage.hpp  render_stage.cpp  render_stage.hpp  ui_stage.cpp  ui_stage.hpp
game/render/: scene_renderer.cpp  scene_renderer.hpp
game/state/: chat_actions.hpp  chat_reducer.hpp  chat_state.hpp  chat_store.hpp
game/ui/: ui_macros.hpp  ui_service.cpp  ui_service.hpp
game/ui/components/base/: label_component.cpp  label_component.hpp  label_component.rcss  label_component.rml
game/ui/components/specialized/: menu_option_component.cpp  menu_option_component.hpp  menu_option_component.rcss  menu_option_component.rml  option_list_component.cpp  option_list_component.hpp  option_list_component.rcss  option_list_component.rml  title_component.cpp  title_component.hpp  title_component.rcss  title_component.rml
game/ui/screens/gameplay/: gameplay_screen.cpp  gameplay_screen.hpp  gameplay_screen.rcss
game/ui/screens/join_friend/: join_friend_screen.cpp  join_friend_screen.hpp  join_friend_screen.rcss  join_friend_screen.rml
game/ui/screens/start_menu/: start_menu_screen.cpp  start_menu_screen.hpp  start_menu_screen.rcss  start_menu_screen.rml
game/ui/styles/: base.rcss  layout.rcss
